fix(trip-service): Update status code for delete
Updated status code for delete opertions along with related api docs
